# BashUtils

./: .gitignore  ReadMe.md
motils/: Cargo.toml  README.md
motils/src/: lib.rs  style.rs  system.rs
motils/src/idea/: mod.rs
motils/src/todo/: mod.rs
musiccrawler/: main.py  urls.txt
musicguitar_crawler/: main.py  requirements.txt  urls.txt
randpasswd/: LICENCE  genpass.py  requirements.txt
