[package]
name = "motils"
version = "0.1.0"
edition = "2024"
default-run = "greet"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
dirs = "6.0.0"
humantime = "2.3.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
