[package]
name = "motils"
version = "0.1.1"
edition = "2024"
description = "A collection of CLI tools for daily usage."
license = "MIT"
repository = "https://github.com/pykeras/BashUtils/tree/master/motils"
readme = "README.md"
keywords = ["cli", "terminal", "todo", "linux", "system"]
categories = ["command-line-utilities"]

default-run = "greet"

[[bin]]
name = "greet"
path = "src/bin/greet.rs"

[[bin]]
name = "todo"
path = "src/bin/todo.rs"

[[bin]]
name = "idea"
path = "src/bin/idea.rs"


[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
csv = "1.4.0"
dirs = "6.0.0"
humantime = "2.3.0"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
tempfile = "3.27.0"
